--- a/style.css
+++ b/style.css
@@ -28,31 +28,47 @@
 /*  body style */
 header {
   background-image: url("./images/hero.png");
-  background-size:contain   ;
+  background-size:100vh ;
   background-repeat: no-repeat;
+  height: 50vh;
   width: 100%;
-  height: 100vh;
-  padding: 30px;
-  margin-bottom: 100px;
-}
-.mobile{
-    display: none;
 }
 .mobile_add{
     display: block;
 }
+.departments{
+  margin: 40px 80px;
+  width: 1280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 32px;
+  margin-bottom: 100px;
+}
 
+.images{
+  width: 405px;
+  height: 296px;
+}
+.title{
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  margin: 32px 0;
+}
 /* media screen */
 @media screen and (min-width: 790px) {
   header {
     background-size: cover;
+    height: 100vh;
   }
   .search {
     border: 1px solid #b0c7cb;
     padding: 10px 16px;
     border-radius: 18px;
-    width: 592px;
-    height: 48px;
+    /* width: 592px;
+    height: 48px; */
     display: flex;
     align-items: center;
     gap: 12px;
