--- a/style.css
+++ b/style.css
@@ -25,48 +25,136 @@
   -webkit-mask-size: 100% 100%;
   mask-size: 100% 100%;
 }
-/* right  */
-.solar--square-alt-arrow-right-line-duotone::after {
+/* right & left arrow  */
+.icon-park-outline--right::after {
   display: inline-block;
-  width: 24px;
-  height: 24px;
+  width: 40px;
+  height: 40px;
   vertical-align: -0.125em;
-  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-width='1.5'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='m10.5 9l3 3l-3 3'/%3E%3Cpath d='M2 12c0-4.714 0-7.071 1.464-8.536C4.93 2 7.286 2 12 2s7.071 0 8.535 1.464C22 4.93 22 7.286 22 12s0 7.071-1.465 8.535C19.072 22 16.714 22 12 22s-7.071 0-8.536-1.465C2 19.072 2 16.714 2 12Z' opacity='0.5'/%3E%3C/g%3E%3C/svg%3E");
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='4' d='m19 12l12 12l-12 12'/%3E%3C/svg%3E");
+  background-color: #b0c7cb;
+  border-radius: 50%;
+}
+.icon-park-outline--left::after {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  vertical-align: -0.125em;
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='4' d='M31 36L19 24l12-12'/%3E%3C/svg%3E");
+  background-color: #b0c7cb;
+  border-radius: 50%;
+}
+/* cart logo */
+.ion--bag-outline::after {
+  display: inline-block;
+  width:  12px;
+  height: 12px;
+  vertical-align: -0.125em;
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M80 176a16 16 0 0 0-16 16v216c0 30.24 25.76 56 56 56h272c30.24 0 56-24.51 56-54.75V192a16 16 0 0 0-16-16Zm80 0v-32a96 96 0 0 1 96-96h0a96 96 0 0 1 96 96v32'/%3E%3C/svg%3E");
 }
 /*  body style */
 header {
   background-image: url("./images/hero.png");
-  background-size:100vh ;
+  background-size: cover;
   background-repeat: no-repeat;
-  height: 50vh;
+  height: 80vh;
   width: 100%;
 }
-.mobile_add{
-    display: block;
+.mobile_add {
+  display: block;
 }
-.container{
+.container {
   margin: 40px 80px;
-  width: 1280px;
-  display: flex;
+  /* background-color: #003741; */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 32px;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 32px;
   margin-bottom: 100px;
 }
 
-.images{
+.images {
   width: 405px;
   height: 296px;
+  max-inline-size: 100;
+  object-fit: contain;
 }
-.title{
-  font-size: 32px;
+.title {
+  font-size: 27px;
   font-weight: bold;
   text-align: center;
   margin: 32px 0;
 }
+
+.electronic {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cardDevices {
+  padding: 10px;
+  border-radius: 12px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2em;
+  box-shadow: 4px 7px 7px gray;
+  position: relative;
+}
+.cardDevices::before {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M4.24 12.25a4.2 4.2 0 0 1-1.24-3A4.25 4.25 0 0 1 7.25 5c1.58 0 2.96.86 3.69 2.14h1.12A4.24 4.24 0 0 1 15.75 5A4.25 4.25 0 0 1 20 9.25c0 1.17-.5 2.25-1.24 3L11.5 19.5zm15.22.71C20.41 12 21 10.7 21 9.25A5.25 5.25 0 0 0 15.75 4c-1.75 0-3.3.85-4.25 2.17A5.22 5.22 0 0 0 7.25 4A5.25 5.25 0 0 0 2 9.25c0 1.45.59 2.75 1.54 3.71l7.96 7.96z'/%3E%3C/svg%3E");
+  display: inline-block;
+  text-align: center;
+  background-color: #e6edee;
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  padding: 4px;
+}
+.eleImg {
+  width: 100%;
+  max-inline-size: 200;
+  aspect-ratio: 1/1;
+}
+.hide{
+display: none;
+}
+
+.cardDevices:hover .hide{
+display: inline-block;
+text-align: center;
+background-color: #002127;
+color: #e6edee;
+border-radius: 10px;
+position: absolute;
+bottom: 17%;
+width: 80%;
+margin: 10%;
+padding: 10px;
+}
+.eleTitle {
+  width: 100%;
+  font-weight: 400;
+  font-size: 18px;
+  text-align: start;
+  color: #002127;
+}
+.details {
+  font-weight: 700;
+  font-size: 20px;
+}
+.salary {
+  font-weight: 700;
+  font-size: 24px;
+  color: #004956;
+}
 /* media screen */
-@media screen and (min-width: 790px) {
+@media screen and (min-width: 890px) {
   header {
     background-size: cover;
     height: 100vh;
@@ -81,5 +169,12 @@ header {
     align-items: center;
     gap: 12px;
     cursor: pointer;
+  }
+  .container {
+    max-width: 1280px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+  .title {
+    font-size: 32px;
   }
 }
