--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ header {
 }
 .container {
   margin: 40px 80px;
-  /* background-color: #003741; */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 32px;
@@ -136,6 +135,8 @@ bottom: 17%;
 width: 80%;
 margin: 10%;
 padding: 10px;
+cursor: pointer;
+
 }
 .eleTitle {
   width: 100%;
@@ -152,6 +153,14 @@ padding: 10px;
   font-weight: 700;
   font-size: 24px;
   color: #004956;
+}
+.your_world{
+  background-image: url(./images/in\ _your_world.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  margin: 10% 0;
 }
 /* media screen */
 @media screen and (min-width: 890px) {
@@ -177,4 +186,9 @@ padding: 10px;
   .title {
     font-size: 32px;
   }
+  .cardDevices:hover .hide{
+position: absolute;
+bottom: 34%;
+width: 80%;
+}
 }
