--- a/style.css
+++ b/style.css
@@ -47,10 +47,18 @@
 /* cart logo */
 .ion--bag-outline::after {
   display: inline-block;
-  width:  12px;
+  width: 12px;
   height: 12px;
   vertical-align: -0.125em;
   content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M80 176a16 16 0 0 0-16 16v216c0 30.24 25.76 56 56 56h272c30.24 0 56-24.51 56-54.75V192a16 16 0 0 0-16-16Zm80 0v-32a96 96 0 0 1 96-96h0a96 96 0 0 1 96 96v32'/%3E%3C/svg%3E");
+}
+/*  close button 'x' */
+.fluent-mdl2--error-badge::after {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  vertical-align: -0.125em;
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2048 2048'%3E%3Cpath fill='%23ec0d0d' d='M1024 0q141 0 272 36t244 104t207 160t161 207t103 245t37 272q0 141-36 272t-104 244t-160 207t-207 161t-245 103t-272 37q-141 0-272-36t-244-104t-207-160t-161-207t-103-245t-37-272q0-141 36-272t104-244t160-207t207-161T752 37t272-37m0 1920q124 0 238-32t214-90t181-140t140-181t91-214t32-239t-32-238t-90-214t-140-181t-181-140t-214-91t-239-32t-238 32t-214 90t-181 140t-140 181t-91 214t-32 239t32 238t90 214t140 181t181 140t214 91t239 32m443-1249l-352 353l352 353l-90 90l-353-352l-353 352l-90-90l352-353l-352-353l90-90l353 352l353-352z'/%3E%3C/svg%3E");
 }
 /*  body style */
 header {
@@ -120,23 +128,22 @@ header {
   max-inline-size: 200;
   aspect-ratio: 1/1;
 }
-.hide{
-display: none;
+.hide {
+  display: none;
 }
 
-.cardDevices:hover .hide{
-display: inline-block;
-text-align: center;
-background-color: #002127;
-color: #e6edee;
-border-radius: 10px;
-position: absolute;
-bottom: 17%;
-width: 80%;
-margin: 10%;
-padding: 10px;
-cursor: pointer;
-
+.cardDevices:hover .hide {
+  display: inline-block;
+  text-align: center;
+  background-color: #002127;
+  color: #e6edee;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 30%;
+  width: 80%;
+  margin: 10%;
+  padding: 10px;
+  cursor: pointer;
 }
 .eleTitle {
   width: 100%;
@@ -154,7 +161,7 @@ cursor: pointer;
   font-size: 24px;
   color: #004956;
 }
-.your_world{
+.your_world {
   background-image: url(./images/in\ _your_world.png);
   background-position: center;
   background-size: cover;
@@ -186,9 +193,17 @@ cursor: pointer;
   .title {
     font-size: 32px;
   }
-  .cardDevices:hover .hide{
-position: absolute;
-bottom: 34%;
-width: 80%;
+  .cardDevices:hover .hide {
+    position: absolute;
+    bottom: 34%;
+    width: 80%;
+  }
 }
+@media screen and (min-width: 800px) {
+ 
+  .cardDevices:hover .hide {
+    position: absolute;
+    bottom: 20%;
+    width: 80%;
+  }
 }
