--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header {
   background-image: url("./images/hero.png");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 80vh;
+  height: 100vh;
   width: 100%;
   margin-bottom: 20%;
 }
@@ -107,7 +107,7 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2em;
-  box-shadow: 4px 7px 7px gray;
+  box-shadow: 4px 7px 7px #3635351A;
   position: relative;
 }
 .cardDevices::before {
@@ -140,11 +140,12 @@ header {
   color: #e6edee;
   border-radius: 10px;
   position: absolute;
-  bottom: 30%;
+  bottom: 50%;
   width: 80%;
   margin: 10%;
   padding: 10px;
   cursor: pointer;
+  box-shadow: 5px 5px 10px #3635351A;
 }
 .eleTitle {
   width: 100%;
@@ -175,7 +176,7 @@ header {
 }
 #shooping_now{cursor: pointer;}
 /* media screen */
-@media screen and (min-width: 890px) {
+@media screen and (min-width: 900px) {
   header {
     background-size: cover;
     height: 100vh;
@@ -184,8 +185,6 @@ header {
     border: 1px solid #b0c7cb;
     padding: 10px 16px;
     border-radius: 18px;
-    /* width: 592px;
-    height: 48px; */
     display: flex;
     align-items: center;
     gap: 12px;
@@ -199,16 +198,16 @@ header {
     font-size: 32px;
   }
   .cardDevices:hover .hide {
-    position: absolute;
     bottom: 34%;
-    width: 80%;
   }
 }
-@media screen and (min-width: 800px) {
- 
+@media screen and (max-width: 840px) {
   .cardDevices:hover .hide {
-    position: absolute;
     bottom: 20%;
-    width: 80%;
+  }
+}
+@media screen and (max-width: 640px) {
+  .cardDevices:hover .hide {
+    bottom: 35%;
   }
 }
