--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ header {
   height: 100vh;
   width: 100%;
   margin-bottom: 20%;
+  overflow: hidden;
 }
 .mobile_add {
   display: block;
@@ -107,9 +108,9 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2em;
-  box-shadow: 4px 7px 7px #3635351a ,-4px -7px 7px #3635351a;
+  box-shadow: 4px 7px 7px #3635351a, -4px -7px 7px #3635351a;
   position: relative;
-   transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out;
 }
 .cardDevices::before {
   content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M4.24 12.25a4.2 4.2 0 0 1-1.24-3A4.25 4.25 0 0 1 7.25 5c1.58 0 2.96.86 3.69 2.14h1.12A4.24 4.24 0 0 1 15.75 5A4.25 4.25 0 0 1 20 9.25c0 1.17-.5 2.25-1.24 3L11.5 19.5zm15.22.71C20.41 12 21 10.7 21 9.25A5.25 5.25 0 0 0 15.75 4c-1.75 0-3.3.85-4.25 2.17A5.22 5.22 0 0 0 7.25 4A5.25 5.25 0 0 0 2 9.25c0 1.45.59 2.75 1.54 3.71l7.96 7.96z'/%3E%3C/svg%3E");
@@ -190,11 +191,11 @@ header {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 15px 25px;
   border-radius: 5px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   display: none;
   align-items: center;
@@ -208,14 +209,52 @@ header {
 }
 
 @keyframes slideIn {
-  from { transform: translateX(100%); }
-  to { transform: translateX(0); }
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
 
 @keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
+.return_top {
+  position: absolute;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid #B0C7CB;
+  border-radius: 18px;
+  background-color: white;
+  color: #002C34;
+}
+
+footer {
+  background-color: #e6edee;
+  border-radius: 100px 100px 0 0;
+   border: 1px solid #B0C7CB;
+   border-bottom: none;
+}
+.contact_us{
+  background-color: #004956;
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* media screen */
 @media screen and (min-width: 900px) {
   header {
