--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ header {
   gap: 2em;
   box-shadow: 4px 7px 7px #3635351a, -4px -7px 7px #3635351a;
   position: relative;
+  overflow: hidden;
   transition: all 0.6s ease-in-out;
 }
 .cardDevices::before {
@@ -231,21 +232,21 @@ header {
   font-size: 18px;
   cursor: pointer;
   left: 50%;
-  top: 50%;
+  top: 70%;
   transform: translate(-50%, -50%);
-  border: 1px solid #B0C7CB;
+  border: 1px solid #b0c7cb;
   border-radius: 18px;
   background-color: white;
-  color: #002C34;
+  color: #002c34;
 }
 
 footer {
   background-color: #e6edee;
   border-radius: 100px 100px 0 0;
-   border: 1px solid #B0C7CB;
-   border-bottom: none;
+  border: 1px solid #b0c7cb;
+  border-bottom: none;
 }
-.contact_us{
+.contact_us {
   background-color: #004956;
   width: 40px;
   height: 40px;
