add battery section , add its functionality to run also add headphones.js & battery.js in data folder update the styles

--- a/styles/cart.css
+++ b/styles/cart.css
@@ -6,10 +6,11 @@
   padding: 10px;
 }
 .cartsItems {
-  margin: 40px 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 .eleTitle {
   text-align: end !important;
