--- a/styles/style.css
+++ b/styles/style.css
@@ -213,7 +213,40 @@ header {
   font-size: 24px;
   font-weight: bold;
 }
+.opinion {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding: 16px 24px;
+  border-radius: 12px;
+  box-shadow: 4px 7px 7px #3635351a, -4px -7px 7px #3635351a;
+}
+.clients-profile img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.clients {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  gap: 32px;
+  margin: 100px 0;
+}
 
+.rating {
+  display: inline-block;
+  width: 100px;
+}
+.client-details {
+  display: flex;
+  gap: 24px;
+}
+.clients-profile {
+  display: flex;
+  align-items: center;
+}
 @keyframes slideIn {
   from {
     transform: translateX(100%);
