--- a/styles/style.css
+++ b/styles/style.css
@@ -230,6 +230,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   margin: 20px 0;
   gap: 32px;
   margin: 100px 0;
