--- a/styles/style.css
+++ b/styles/style.css
@@ -79,12 +79,11 @@ header {
 
 .container {
   margin: 40px 80px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 32px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 100px;
+  gap: 32px;
 }
 
 .images {
@@ -312,6 +311,10 @@ footer {
   }
   .container {
     max-width: 1280px;
+    display: grid;
+    gap: 32px;
+    justify-content: center;
+    align-items: center;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
   .title {
