--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@
   justify-content: center;
   align-items: center;
 }
-.cardDevices {
+.cardDevice {
   padding: 10px;
   border-radius: 12px;
   box-shadow: 4px 7px 7px #3635351a, -4px -7px 7px #3635351a;
